--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "vue-router": "^3.0.1",
+    "vue-uploader": "^0.1.2",
     "vuex": "^3.0.1"
   }
 }
