--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/preset-stage-2": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.2",
+    "babel-plugin-import": "^1.12.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^1.0.0",
